# ai-indonesian-fritters-counter

./: .gitignore  README.md  TRAINING.md  config.yaml  pyproject.toml
scripts/: seg_to_det.py  train.py
