[project]
name = "ai-indonesian-fritters-counter"
version = "0.1.0"
description = "YOLO26 training for gorengan stock-status detection"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "ultralytics>=8.3.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
]

# Pull torch/torchvision from the official PyTorch CUDA index (cu124).
# On Windows the default PyPI torch wheel is CPU-only, so this is required
# to actually train on the RTX 4060 Ti (CUDA).
[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# This repo is an application (training scripts), not an installable package.
[tool.uv]
package = false
